[package]
name = "spooling"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
genpdf = "0.2.0"
tokio="1.0"
serde_json = "1.0.140"
actix-files = "0.6.6"
zip = "0.5.13"
futures-util = "0.3.31"
